--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,16 @@
 *.kicad_prl
 *.sch-bak
 *~
+~*
 _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
 
+\#auto_saved_files#
 rescue-backup/
+*-backups/
 
 *.net
 
